--- a/.env
+++ b/.env
@@ -22,5 +22,5 @@ APP_SECRET=6cdd7f35b31809e9a09b822a1d1e65ecd488ba4d
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://db_user:db_password@db:5432/jk?serverVersion=14.3&charset=utf8"
+DATABASE_URL="postgresql://db_user:db_password@db:5432/db_name_test?serverVersion=14.3&charset=utf8"
 ###< doctrine/doctrine-bundle ###
